--- a/SecurityBoot-API/pom.xml
+++ b/SecurityBoot-API/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
+        <!-- kaptcha图片验证码 -->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
