--- a/SecurityBoot-API/pom.xml
+++ b/SecurityBoot-API/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>kaptcha</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-configuration-processor</artifactId>
+        	<optional>true</optional>
+        </dependency>
 	</dependencies>
 
 	<build>
