--- a/SecurityBoot-API/src/main/resources/application.properties
+++ b/SecurityBoot-API/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 
 server.servlet.context-path=/cloud
-#server.servlet.session.timeout=10
+server.servlet.session.timeout=10
 server.max-http-header-size=20971520
 server.tomcat.uri-encoding=UTF-8
 
