调整结构包名

--- a/SecurityBoot-API/pom.xml
+++ b/SecurityBoot-API/pom.xml
@@ -132,6 +132,17 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+        <!-- elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+        <!-- bboss 处理Es的jar -->
+        <dependency>
+            <groupId>com.bbossgroups.plugins</groupId>
+            <artifactId>bboss-elasticsearch-spring-boot-starter</artifactId>
+            <version>5.9.9</version>
+        </dependency>
 	</dependencies>
 
 	<build>
