--- a/SecurityBoot-API/src/main/resources/application.properties
+++ b/SecurityBoot-API/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 
 server.servlet.context-path=/cloud
-server.servlet.session.timeout=10
+#server.servlet.session.timeout=10
 server.max-http-header-size=20971520
 server.tomcat.uri-encoding=UTF-8
 
@@ -26,6 +26,36 @@ spring.datasource.timeBetweenEvictionRunsMillis=60000
 #池中的连接空闲30分钟后被回收
 spring.datasource.minEvictableIdleTimeMillis=300000
 
+spring.elasticsearch.bboss.elasticUser:
+spring.elasticsearch.bboss.elasticPassword:
+spring.elasticsearch.bboss.elasticsearch.rest.hostNames=127.0.0.1:9200
+spring.elasticsearch.bboss.elasticsearch.dateFormat=yyyy-MM-dd hh:mm:ss
+spring.elasticsearch.bboss.elasticsearch.timeZone=Asia/Shanghai
+spring.elasticsearch.bboss.elasticsearch.ttl=2d
+spring.elasticsearch.bboss.elasticsearch.showTemplate=true
+spring.elasticsearch.bboss.elasticsearch.discoverHost=false
+spring.elasticsearch.bboss.dslfile.refreshInterval=-1
+      
+spring.elasticsearch.bboss.http.timeoutConnection=400000
+spring.elasticsearch.bboss.http.timeoutSocket=400000
+spring.elasticsearch.bboss.http.connectionRequestTimeout=400000
+spring.elasticsearch.bboss.http.retryTime=1
+spring.elasticsearch.bboss.http.maxLineLength=-1
+spring.elasticsearch.bboss.http.maxHeaderCount=200
+spring.elasticsearch.bboss.http.maxTotal=400
+spring.elasticsearch.bboss.http.defaultMaxPerRoute=200
+spring.elasticsearch.bboss.http.soReuseAddress=false
+spring.elasticsearch.bboss.http.soKeepAlive=false
+spring.elasticsearch.bboss.http.timeToLive=3600000
+spring.elasticsearch.bboss.http.keepAlive=3600000
+spring.elasticsearch.bboss.http.keystore=
+spring.elasticsearch.bboss.http.keyPassword=
+spring.elasticsearch.bboss.http.hostnameVerifier=
+
+#basePath 表示mapper文件的存放位置        
+es.basePath=esmapper/
+#indexs 表示所有的es索引，逗号分隔
+es.indexs=teacher,student
 
 #热部署开关，false即不启用热部署
 spring.devtools.restart.enabled=true
