集成boot版es，支持高亮分页查询，但是有版本限制

--- a/SecurityBoot-API/src/main/resources/application.properties
+++ b/SecurityBoot-API/src/main/resources/application.properties
@@ -57,6 +57,11 @@ es.basePath=esmapper/
 #indexs 表示所有的es索引，逗号分隔
 es.indexs=teacher,student
 
+####springboot 默认集成es，有版本限制，目前不低于6.4.3
+# elasticsearch.yml 文件中的 cluster.name
+spring.data.elasticsearch.cluster-name=my-application
+# elasticsearch 调用地址，多个使用“,”隔开
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 #热部署开关，false即不启用热部署
 spring.devtools.restart.enabled=true
 
