--- a/SecurityBoot-API/src/main/resources/application.properties
+++ b/SecurityBoot-API/src/main/resources/application.properties
@@ -26,8 +26,24 @@ spring.datasource.timeBetweenEvictionRunsMillis=60000
 #池中的连接空闲30分钟后被回收
 spring.datasource.minEvictableIdleTimeMillis=300000
 
-spring.elasticsearch.bboss.elasticUser:
-spring.elasticsearch.bboss.elasticPassword:
+#发送邮件服务器
+spring.mail.host= smtp.163.com
+#发送邮件的邮箱地址
+spring.mail.username= herozhi0821@163.com
+#客户端授权码，不是邮箱密码，这个在邮箱设置里面自动生成的
+spring.mail.password= OXYxxxxxxxxxxxxYAH
+#端口号465或587
+spring.mail.properties.mail.smtp.port= 465 
+#发送邮件的地址，和上面username一致
+#spring.mail.from= 835435594@qq.com 
+#可以任意
+spring.mail.properties.mail.smtp.starttls.enable= true
+spring.mail.properties.mail.smtp.starttls.required= true
+spring.mail.properties.mail.smtp.ssl.enable= true
+spring.mail.default-encoding= utf-8
+
+#spring.elasticsearch.bboss.elasticUser=
+#spring.elasticsearch.bboss.elasticPassword=
 spring.elasticsearch.bboss.elasticsearch.rest.hostNames=127.0.0.1:9200
 spring.elasticsearch.bboss.elasticsearch.dateFormat=yyyy-MM-dd hh:mm:ss
 spring.elasticsearch.bboss.elasticsearch.timeZone=Asia/Shanghai
