隐藏个人信息

--- a/SecurityBoot-API/src/main/resources/application.properties
+++ b/SecurityBoot-API/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.datasource.minEvictableIdleTimeMillis=300000
 #发送邮件服务器
 spring.mail.host= smtp.163.com
 #发送邮件的邮箱地址
-spring.mail.username= herozhi0821@163.com
+spring.mail.username= xxxxxxx@163.com
 #客户端授权码，不是邮箱密码，这个在邮箱设置里面自动生成的
 spring.mail.password= OXYxxxxxxxxxxxxYAH
 #端口号465或587
