--- a/SecurityBoot-API/pom.xml
+++ b/SecurityBoot-API/pom.xml
@@ -23,6 +23,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		<!-- 添加事务时需要starter-jdbc包 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
